--- a/css-activityPage/activity.scss
+++ b/css-activityPage/activity.scss
@@ -92,6 +92,34 @@ h1, h2, h3, h4, h5, h6{
 }
 
 //Module
+.skipLink{
+    position: absolute;
+    width: 25vw;
+    top: 5vh;
+    left: -500px;
+    border-radius: 0.3vw;
+    padding: 1% 3%;
+    text-align: center;
+    background-color: #0D88C4;
+    transition: all 0.3s ease-in-out;
+
+    @include media-sp{
+        top: 13vh;
+        width: 200px;
+        border-radius: 2vw;
+        padding: 4% 2% 4% 2%;
+    }
+    
+    .skipLink_text{
+        color: white;
+        font-size: calc(0.1rem + 1.5vw);
+        transition: transform 1s;
+
+        @include media-tablet{
+            font-size: 13px;
+        }
+    }
+}
 .nav__pc{
     border-radius: 10px;
     background-color: white;
@@ -142,7 +170,15 @@ h1, h2, h3, h4, h5, h6{
 .nav__sp{
     display: none;
     position: relative;
-    height: 60px;
+    background-color: white;
+    border-radius: 2vw;
+    width: 220px;
+    padding: 5px 0;
+    margin-top: 1%;
+    margin-right: 5px;
+    margin-left: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;
 
     @include media-sp {
         display: block;
@@ -152,10 +188,8 @@ h1, h2, h3, h4, h5, h6{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 210px;
-        margin-top: 1%;
-        margin-right: 5px;
-        margin-left: auto;
+        width: 87%;
+        margin: 0 auto;
 
         .navSp_contact{
             background-color: #0D88C4;
@@ -181,6 +215,7 @@ h1, h2, h3, h4, h5, h6{
             width: 45px;
             height: 100%;
             aspect-ratio: 1/1;
+            transition: transform 0.3s;
             cursor: pointer;
 
             .line {
@@ -215,29 +250,36 @@ h1, h2, h3, h4, h5, h6{
         transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;  
         
         .dropdown_item{
-        display: flex;
-        align-items: center;
-        margin-bottom: 30px;
-    }
-    .dropdown_itemText{
-        font-size: 20px;
-        margin-left: 16px;
-    }
-    }
-    .arrow{
-        width: 16px;
-        height: 16px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
+            display: flex;
+            align-items: center;
+            padding:15px 0 ;
 
-        .line__arrow{
-            display: block;
-            border-radius: 2px;
-            width: 14px;
-            height: 0.3vh;
-            background-color: #333;
-        }
+            .dropdown_itemText{
+                font-size: 20px;
+                margin-left: 16px;
+                transition: transform 0.3s;
+            }
+            .dropdown_itemText__close{
+                font-size: 18px;
+                color: #0D88C4;
+                transition: transform 0.3s;
+                cursor: pointer;
+            }
+       }
+        .arrow{
+            width: 16px;
+            height: 16px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+
+           .line__arrow{
+                display: block;
+                border-radius: 2px;
+                width: 14px;
+                height: 0.3vh;
+                background-color: #333;
+            }
 
             .line1__arrow{
                 transform-origin: top left;
@@ -247,6 +289,7 @@ h1, h2, h3, h4, h5, h6{
                 transform-origin: bottom left;
                 transform: rotate(-31deg);
             }
+        }
     }
 }
 .mainVisual_content{
@@ -414,13 +457,27 @@ h1, h2, h3, h4, h5, h6{
     transform: translateY(0); 
     transition: opacity 0.3s, transform 0.3s;
 }
+.skipLink__is-focused{
+    transform: scale(1.1);
+    left: 10px;
+}
 .nav__sp{
+    .navSp_contact:focus{
+        transform: scale(1.1);
+        transition: transform 0.3s;
+    }
+
     .navSp_dropdown__is-open{
     opacity: 1;
     visibility: visible;
     transform: translateX(0); 
     transition: opacity 0.3s, transform 0.3s;
 }
+}
+.navSp_hamburger:focus{
+    outline: none;
+    transform: scale(1.1);
+    transition: transform 0.3s;
 }
 .line1__is-active {
     transform: rotate(45deg);
@@ -431,11 +488,26 @@ h1, h2, h3, h4, h5, h6{
 .line3__is-active {
     transform: rotate(-45deg);
 }
-.navPc_item:hover{
+.dropdown_itemText:focus{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus{
     transform: scale(1.1);
     transition: transform 0.3s;
 }
 .navPc_home:hover{
     transform: scale(1.1);
     transition: transform 0.3s;
+}
+.navPc_home__is-focused{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.navPc_item__home:hover,
+.navPc_item__home:focus{
+    transform: none;
+    transition: none;
 }
