--- a/css-contactPage/contact.original.css
+++ b/css-contactPage/contact.original.css
@@ -66,10 +66,43 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
-.l-body {
-  width: 100%;
-  padding-bottom: 70px;
+.l-cta {
   background-color: #CFEDAF;
+  padding-bottom: 100px;
+}
+
+.l-waveImg__b {
+  width: 100%;
+}
+
+.skipLink {
+  position: absolute;
+  width: 25vw;
+  top: 5vh;
+  left: -500px;
+  border-radius: 0.3vw;
+  padding: 1% 3%;
+  text-align: center;
+  background-color: #0D88C4;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 750px) {
+  .skipLink {
+    top: 13vh;
+    width: 200px;
+    border-radius: 2vw;
+    padding: 4% 2% 4% 2%;
+  }
+}
+.skipLink .skipLink_text {
+  color: white;
+  font-size: calc(0.1rem + 1.5vw);
+  transition: transform 1s;
+}
+@media (max-width: 1024px) {
+  .skipLink .skipLink_text {
+    font-size: 13px;
+  }
 }
 
 .nav__pc {
@@ -126,7 +159,15 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp {
   display: none;
   position: relative;
-  height: 60px;
+  background-color: white;
+  border-radius: 2vw;
+  width: 220px;
+  padding: 5px 0;
+  margin-top: 1%;
+  margin-right: 5px;
+  margin-left: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s ease-in-out;
 }
 @media (max-width: 750px) {
   .nav__sp {
@@ -137,10 +178,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 210px;
-  margin-top: 1%;
-  margin-right: 5px;
-  margin-left: auto;
+  width: 87%;
+  margin: 0 auto;
 }
 .nav__sp .navSp_menu .navSp_contact {
   background-color: #0D88C4;
@@ -165,6 +204,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 45px;
   height: 100%;
   aspect-ratio: 1/1;
+  transition: transform 0.3s;
   cursor: pointer;
 }
 .nav__sp .navSp_menu .navSp_hamburger .line {
@@ -199,31 +239,38 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp .navSp_dropdown .dropdown_item {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  padding: 15px 0;
 }
-.nav__sp .navSp_dropdown .dropdown_itemText {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText {
   font-size: 20px;
   margin-left: 16px;
+  transition: transform 0.3s;
 }
-.nav__sp .arrow {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText__close {
+  font-size: 18px;
+  color: #0D88C4;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+.nav__sp .navSp_dropdown .arrow {
   width: 16px;
   height: 16px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
-.nav__sp .arrow .line__arrow {
+.nav__sp .navSp_dropdown .arrow .line__arrow {
   display: block;
   border-radius: 2px;
   width: 14px;
   height: 0.3vh;
   background-color: #333;
 }
-.nav__sp .arrow .line1__arrow {
+.nav__sp .navSp_dropdown .arrow .line1__arrow {
   transform-origin: top left;
   transform: rotate(31deg);
 }
-.nav__sp .arrow .line2__arrow {
+.nav__sp .navSp_dropdown .arrow .line2__arrow {
   transform-origin: bottom left;
   transform: rotate(-31deg);
 }
@@ -289,7 +336,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-align: center;
   color: #004092;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
+  background-color: #CFEDAF;
 }
 @media (max-width: 750px) {
   .m-title {
@@ -298,109 +346,121 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 750px) {
   .m-title {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
   }
 }
 
-.activity_item {
-  display: flex;
-  position: relative;
-  margin-bottom: 7%;
+.container__cta {
+  border: #004092 solid 7px;
+  width: 93%;
+  margin: 0 auto;
+  background-color: #92c186;
+  border-radius: 8vw;
+  padding: 10% 0;
 }
 @media (max-width: 750px) {
-  .activity_item {
+  .container__cta {
+    border: #004092 solid 4px;
+  }
+}
+.container__cta .cta_title__conPage {
+  font-size: calc(0.1rem + 5.4vw);
+  text-align: center;
+  color: white;
+}
+@media (max-width: 750px) {
+  .container__cta .cta_title__conPage {
+    font-size: calc(0.1rem + 7.6vw);
+    margin-bottom: 5%;
+  }
+}
+.container__cta .cta_text__conPage {
+  font-size: calc(0.1rem + 3.4vw);
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 5%;
+}
+@media (max-width: 750px) {
+  .container__cta .cta_text__conPage {
+    font-size: calc(0.1rem + 5vw);
+    margin-bottom: 10%;
+  }
+}
+.container__cta .cta_button__conPage {
+  padding: 5% 0;
+  width: 60%;
+  background-color: #FFF0AC;
+  margin: 0 auto;
+  font-size: calc(0.1rem + 3.7vw);
+  text-align: center;
+  border-radius: 100px;
+  border: #004092 solid 7px;
+  transition: transform 0.3s;
+}
+@media (max-width: 750px) {
+  .container__cta .cta_button__conPage {
+    padding: 10% 0;
     width: 90%;
-    margin: 0 auto 7%;
+    font-size: calc(0.1rem + 7vw);
+    border: #004092 solid 4px;
+  }
+}
+
+.sns_title {
+  font-size: calc(0.1rem + 6vw);
+  font-weight: 700;
+  text-align: center;
+  color: #004092;
+  padding: 50px 0;
+}
+@media (max-width: 750px) {
+  .sns_title {
+    font-size: calc(0.1rem + 8vw);
+  }
+}
+@media (max-width: 750px) {
+  .sns_title {
+    padding-bottom: 20px;
+  }
+}
+
+.sns_content {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 100px;
+}
+@media (max-width: 750px) {
+  .sns_content {
     flex-direction: column;
   }
 }
-.activity_item .activity_itemImg {
-  width: 51vw;
-  aspect-ratio: 1/1;
-  border-radius: 400px;
-  background-color: #8b8f8f;
-  border: black solid 0.2vw;
-  z-index: 10;
+.sns_content .sns_text {
+  width: 43%;
+  font-size: calc(0.1rem + 2vw);
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemImg {
-    display: none;
+  .sns_content .sns_text {
+    width: 100%;
+    font-size: calc(0.1rem + 4vw);
+    margin-bottom: 10%;
   }
 }
-.activity_item .activity_itemImg__sp {
-  display: none;
-  width: 100%;
-  position: absolute;
+.sns_content .sns_link {
+  width: 40%;
+  aspect-ratio: 2/3;
+  background-color: #797a78;
+  border-radius: 5vw;
+  transition: transform 0.3s;
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemImg__sp {
-    display: block;
-  }
-}
-.activity_item .activity_itemImg__sp img {
-  width: 60%;
-  aspect-ratio: 1/1;
-  border-radius: 200px;
-  background-color: #8b8f8f;
-  border: black solid 0.2vw;
-  z-index: 10;
-  margin: 0 auto;
-}
-.activity_item .activity_itemContent {
-  width: 60%;
-  height: auto;
-  background-color: #FCF8ED;
-  border-radius: 8.3vw;
-  border: black solid 1px;
-  position: absolute;
-  left: 48vw;
-}
-@media (max-width: 750px) {
-  .activity_item .activity_itemContent {
-    position: static;
-    margin-top: 45vw;
+  .sns_content .sns_link {
     width: 100%;
   }
 }
-.activity_item .activity_itemContent .activity_itemText {
-  margin: 20px auto 50px;
-  width: 65%;
-}
-@media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText {
-    margin-top: 50px;
-    width: 80%;
-  }
-}
-.activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
-  font-size: calc(0.1rem + 3.3vw);
-  font-weight: 700;
-  margin-bottom: 7%;
-}
-@media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
-    font-size: calc(0.1rem + 5vw);
-  }
-}
-.activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
-  font-size: calc(0.1rem + 1.9vw);
-}
-@media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
-    font-size: calc(0.1rem + 4.1vw);
-  }
-}
-.activity_item .activity_itemContent__r {
-  right: 43vw;
-  left: auto;
-}
-.activity_item .activity_itemImg__r {
-  margin-right: 0;
-  margin-left: auto;
-}
 
 .footer_copyRight {
-  background-color: #CFEDAF;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -412,11 +472,30 @@ h1, h2, h3, h4, h5, h6 {
   transition: opacity 0.3s, transform 0.3s;
 }
 
+.skipLink__is-focused {
+  transform: scale(1.1);
+  left: 10px;
+}
+.skipLink__is-focused .skipLink_text:focus {
+  transform: scale(1.5);
+  transition: transform 1s;
+}
+
+.nav__sp .navSp_contact:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
 .nav__sp .navSp_dropdown__is-open {
   opacity: 1;
   visibility: visible;
   transform: translateX(0);
   transition: opacity 0.3s, transform 0.3s;
+}
+
+.navSp_hamburger:focus {
+  outline: none;
+  transform: scale(1.1);
+  transition: transform 0.3s;
 }
 
 .line1__is-active {
@@ -431,7 +510,13 @@ h1, h2, h3, h4, h5, h6 {
   transform: rotate(-45deg);
 }
 
-.navPc_item:hover {
+.dropdown_itemText:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus {
   transform: scale(1.1);
   transition: transform 0.3s;
 }
@@ -439,4 +524,27 @@ h1, h2, h3, h4, h5, h6 {
 .navPc_home:hover {
   transform: scale(1.1);
   transition: transform 0.3s;
-}/*# sourceMappingURL=activity.original.css.map */
+}
+
+.navPc_home__is-focused {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item__home:hover,
+.navPc_item__home:focus {
+  transform: none;
+  transition: none;
+}
+
+.sns_link:hover,
+.sns_link:focus {
+  transform: scale(1.05);
+  transition: transform 0.3s;
+}
+
+.cta_button__conPage:hover,
+.cta_button__conPage:focus {
+  transform: scale(1.05);
+  transition: transform 0.3s;
+}/*# sourceMappingURL=contact.original.css.map */
