--- a/css-topPage/style.original.css
+++ b/css-topPage/style.original.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .l-mainPage {
   display: none;
+  position: relative;
 }
 
 .l-header {
@@ -183,6 +184,36 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.skipLink {
+  position: absolute;
+  width: 25vw;
+  top: 5vh;
+  left: -500px;
+  border-radius: 0.3vw;
+  padding: 1% 3%;
+  text-align: center;
+  background-color: #0D88C4;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 750px) {
+  .skipLink {
+    top: 13vh;
+    width: 200px;
+    border-radius: 2vw;
+    padding: 4% 2% 4% 2%;
+  }
+}
+.skipLink .skipLink_text {
+  color: white;
+  font-size: calc(0.1rem + 1.5vw);
+  transition: transform 1s;
+}
+@media (max-width: 1024px) {
+  .skipLink .skipLink_text {
+    font-size: 13px;
+  }
+}
+
 .nav__pc {
   border-radius: 10px;
   background-color: white;
@@ -237,7 +268,15 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp {
   display: none;
   position: relative;
-  height: 60px;
+  background-color: white;
+  border-radius: 2vw;
+  width: 220px;
+  padding: 5px 0;
+  margin-top: 1%;
+  margin-right: 5px;
+  margin-left: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s ease-in-out;
 }
 @media (max-width: 750px) {
   .nav__sp {
@@ -248,10 +287,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 210px;
-  margin-top: 1%;
-  margin-right: 5px;
-  margin-left: auto;
+  width: 87%;
+  margin: 0 auto;
 }
 .nav__sp .navSp_menu .navSp_contact {
   background-color: #0D88C4;
@@ -276,6 +313,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 45px;
   height: 100%;
   aspect-ratio: 1/1;
+  transition: transform 0.3s;
   cursor: pointer;
 }
 .nav__sp .navSp_menu .navSp_hamburger .line {
@@ -310,31 +348,38 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp .navSp_dropdown .dropdown_item {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  padding: 15px 0;
 }
-.nav__sp .navSp_dropdown .dropdown_itemText {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText {
   font-size: 20px;
   margin-left: 16px;
+  transition: transform 0.3s;
 }
-.nav__sp .arrow {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText__close {
+  font-size: 18px;
+  color: #0D88C4;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+.nav__sp .navSp_dropdown .arrow {
   width: 16px;
   height: 16px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
-.nav__sp .arrow .line__arrow {
+.nav__sp .navSp_dropdown .arrow .line__arrow {
   display: block;
   border-radius: 2px;
   width: 14px;
   height: 0.3vh;
   background-color: #333;
 }
-.nav__sp .arrow .line1__arrow {
+.nav__sp .navSp_dropdown .arrow .line1__arrow {
   transform-origin: top left;
   transform: rotate(31deg);
 }
-.nav__sp .arrow .line2__arrow {
+.nav__sp .navSp_dropdown .arrow .line2__arrow {
   transform-origin: bottom left;
   transform: rotate(-31deg);
 }
@@ -382,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 750px) {
   .mainVisual_const .const_board .board_text__nameTop {
     font-size: calc(0.1rem + 27vw);
-    margin-bottom: 15%;
+    margin-bottom: 8%;
   }
 }
 .mainVisual_const .const_board .board_text__construction {
@@ -451,7 +496,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 750px) {
   .topNews_title {
-    font-size: calc(0.1rem + 6.3vw);
+    font-size: calc(0.1rem + 8vw);
     margin-bottom: 3vh;
   }
 }
@@ -484,7 +529,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 750px) {
   .topNews_item .topNews_itemPostDate {
     opacity: 1;
-    font-size: calc(0.1rem + 2.3vw);
+    font-size: calc(0.1rem + 4vw);
   }
 }
 .topNews_item .topNews_itemTitle {
@@ -926,10 +971,19 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.l-loadingPage__is-active {
+.l-loadingPage__is-hidden {
   display: none;
   visibility: hidden;
   transition: opacity 1s, visibility 1s;
+}
+
+.skipLink__is-focused {
+  transform: scale(1.1);
+  left: 10px;
+}
+.skipLink__is-focused .skipLink_text:focus {
+  transform: scale(1.5);
+  transition: transform 1s;
 }
 
 .l-header__is-open {
@@ -939,11 +993,60 @@ h1, h2, h3, h4, h5, h6 {
   transition: opacity 0.3s, transform 0.3s;
 }
 
+.nav__sp .navSp_contact:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
 .nav__sp .navSp_dropdown__is-open {
   opacity: 1;
   visibility: visible;
   transform: translateX(0);
   transition: opacity 0.3s, transform 0.3s;
+}
+
+.navSp_hamburger:focus {
+  outline: none;
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.line1__is-active {
+  transform: rotate(45deg);
+}
+
+.line2__is-active {
+  opacity: 0;
+}
+
+.line3__is-active {
+  transform: rotate(-45deg);
+}
+
+.dropdown_itemText:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_home:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_home__is-focused {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item__home:hover,
+.navPc_item__home:focus {
+  transform: none;
+  transition: none;
 }
 
 .subheadText__is-open {
@@ -958,6 +1061,7 @@ h1, h2, h3, h4, h5, h6 {
   .subheadText__is-open {
     width: 100%;
     font-size: calc(0.1rem + 4.7vw);
+    margin-bottom: 15%;
   }
 }
 
@@ -976,37 +1080,18 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin-left: 0;
     font-size: calc(0.1rem + 4.7vw);
+    margin-bottom: 15%;
   }
 }
 
-.line1__is-active {
-  transform: rotate(45deg);
-}
-
-.line2__is-active {
-  opacity: 0;
-}
-
-.line3__is-active {
-  transform: rotate(-45deg);
-}
-
-.navPc_item:hover {
-  transform: scale(1.1);
-  transition: transform 0.3s;
-}
-
-.navPc_home:hover {
-  transform: scale(1.1);
-  transition: transform 0.3s;
-}
-
-.topNews_item:hover {
+.topNews_item:hover,
+.topNews_item:focus {
   transform: scale(1.02);
   transition: transform 0.3s;
 }
 
-.cta_button:hover {
+.cta_button:hover,
+.cta_button:focus {
   transform: scale(1.05);
   transition: transform 0.3s;
 }/*# sourceMappingURL=style.original.css.map */
