--- a/css-aboutPage/about.scss
+++ b/css-aboutPage/about.scss
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6{
     transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;
 
     @include media-tablet{
-        width: 520px;
+        width: 600px;
     }
     @include media-sp {
         width: auto;
@@ -92,6 +92,34 @@ h1, h2, h3, h4, h5, h6{
 }
 
 //Module
+.skipLink{
+    position: absolute;
+    width: 25vw;
+    top: 5vh;
+    left: -500px;
+    border-radius: 0.3vw;
+    padding: 1% 3%;
+    text-align: center;
+    background-color: #0D88C4;
+    transition: all 0.3s ease-in-out;
+
+    @include media-sp{
+        top: 13vh;
+        width: 200px;
+        border-radius: 2vw;
+        padding: 4% 2% 4% 2%;
+    }
+    
+    .skipLink_text{
+        color: white;
+        font-size: calc(0.1rem + 1.5vw);
+        transition: transform 1s;
+
+        @include media-tablet{
+            font-size: 13px;
+        }
+    }
+}
 .nav__pc{
     border-radius: 10px;
     background-color: white;
@@ -142,7 +170,15 @@ h1, h2, h3, h4, h5, h6{
 .nav__sp{
     display: none;
     position: relative;
-    height: 60px;
+    background-color: white;
+    border-radius: 2vw;
+    width: 220px;
+    padding: 5px 0;
+    margin-top: 1%;
+    margin-right: 5px;
+    margin-left: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;
 
     @include media-sp {
         display: block;
@@ -152,10 +188,8 @@ h1, h2, h3, h4, h5, h6{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 210px;
-        margin-top: 1%;
-        margin-right: 5px;
-        margin-left: auto;
+        width: 87%;
+        margin: 0 auto;
 
         .navSp_contact{
             background-color: #0D88C4;
@@ -181,6 +215,7 @@ h1, h2, h3, h4, h5, h6{
             width: 45px;
             height: 100%;
             aspect-ratio: 1/1;
+            transition: transform 0.3s;
             cursor: pointer;
 
             .line {
@@ -215,29 +250,36 @@ h1, h2, h3, h4, h5, h6{
         transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;  
         
         .dropdown_item{
-        display: flex;
-        align-items: center;
-        margin-bottom: 30px;
-    }
-    .dropdown_itemText{
-        font-size: 20px;
-        margin-left: 16px;
-    }
-    }
-    .arrow{
-        width: 16px;
-        height: 16px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
+            display: flex;
+            align-items: center;
+            padding:15px 0 ;
 
-        .line__arrow{
-            display: block;
-            border-radius: 2px;
-            width: 14px;
-            height: 0.3vh;
-            background-color: #333;
-        }
+            .dropdown_itemText{
+                font-size: 20px;
+                margin-left: 16px;
+                transition: transform 0.3s;
+            }
+            .dropdown_itemText__close{
+                font-size: 18px;
+                color: #0D88C4;
+                transition: transform 0.3s;
+                cursor: pointer;
+            }
+       }
+        .arrow{
+            width: 16px;
+            height: 16px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+
+           .line__arrow{
+                display: block;
+                border-radius: 2px;
+                width: 14px;
+                height: 0.3vh;
+                background-color: #333;
+            }
 
             .line1__arrow{
                 transform-origin: top left;
@@ -247,6 +289,7 @@ h1, h2, h3, h4, h5, h6{
                 transform-origin: bottom left;
                 transform: rotate(-31deg);
             }
+        }
     }
 }
 .mainVisual_content{
@@ -310,6 +353,7 @@ h1, h2, h3, h4, h5, h6{
 }
 .activity_item{
     display: flex;
+    align-items: flex-start;
     position: relative;
     margin-bottom: 7%;
 
@@ -325,6 +369,8 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 400px;
         background-color: #8b8f8f;
         border: black solid 0.2vw;
+        position: absolute;
+
         z-index: 10;
 
         @include media-sp{
@@ -351,54 +397,82 @@ h1, h2, h3, h4, h5, h6{
         }
     }
     .activity_itemContent{
-        width: 60%;
+        width: 51%;
         height: auto;
         background-color: #FCF8ED;
-        border-radius: 8.3vw;
+        border-top-left-radius: 8.3vw;
+        border-bottom-left-radius: 8.3vw;
         border: black solid 1px;
-        position: absolute;
-        left: 48vw;
+        margin-left: auto;
 
         @include media-sp{
-            position: static;
-            margin-top: 45vw;
+            margin: 45vw auto 0;
+            border-top-right-radius: 8.3vw;
+            border-bottom-right-radius: 8.3vw;
             width: 100%;
         }
 
         .activity_itemText{
-            margin:20px auto 50px;
-            width: 65%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            margin-right: 0;
+            margin-left: auto;
+            padding-right: 6%;
+            width: 75%;
 
             @include media-sp{
-                margin-top: 50px;
+                margin: 50px auto;
+                padding-right: 0;
                 width: 80%;
             }
+        }
+        .activity_itemTitle{
+            font-size: calc(0.1rem + 3.3vw);
+            font-weight: 700;
+            margin-bottom: 7%;
 
-            .activity_itemTitle{
-                font-size: calc(0.1rem + 3.3vw);
-                font-weight: 700;
-                margin-bottom: 7%;
-
-                @include media-sp{
-                    font-size: calc(0.1rem + 5vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 5vw);
             }
-            .activity_itemDescription{
-                font-size: calc(0.1rem + 1.9vw);
+        }
+        .activity_itemDescription{
+            font-size: calc(0.1rem + 1.9vw);
 
-                @include media-sp{
-                    font-size: calc(0.1rem + 4.1vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 4.1vw);
             }
         }
     }
     .activity_itemContent__r{
-        right: 43vw;
-        left: auto;
+        border-top-right-radius: 8.3vw;
+        border-bottom-right-radius: 8.3vw;
+        border-top-left-radius: 0vw;
+        border-bottom-left-radius: 0vw;
+        margin-right: auto;
+        margin-left: 0;
+
+        @include media-sp{
+            border-top-left-radius: 8.3vw;
+            border-bottom-left-radius: 8.3vw;
+        }
+
+        .activity_itemText__r{
+            width: 80%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            padding-left: 15%;
+            padding-right: 0;
+            margin-left: 0;
+            margin-right: 5%;
+
+            @include media-sp{
+                margin: 50px auto;
+                padding: 0;
+            }
+        }
     }
     .activity_itemImg__r{
-        margin-right: 0;
-        margin-left: auto;
+        right: 0;
     }
 }
 .footer_copyRight{
@@ -414,13 +488,32 @@ h1, h2, h3, h4, h5, h6{
     transform: translateY(0); 
     transition: opacity 0.3s, transform 0.3s;
 }
+.skipLink__is-focused{
+    transform: scale(1.1);
+    left: 10px;
+
+    .skipLink_text:focus{
+        transform: scale(1.3);
+        transition: transform 1s;
+    }
+}
 .nav__sp{
+    .navSp_contact:focus{
+        transform: scale(1.1);
+        transition: transform 0.3s;
+    }
+
     .navSp_dropdown__is-open{
     opacity: 1;
     visibility: visible;
     transform: translateX(0); 
     transition: opacity 0.3s, transform 0.3s;
 }
+}
+.navSp_hamburger:focus{
+    outline: none;
+    transform: scale(1.1);
+    transition: transform 0.3s;
 }
 .line1__is-active {
     transform: rotate(45deg);
@@ -431,11 +524,26 @@ h1, h2, h3, h4, h5, h6{
 .line3__is-active {
     transform: rotate(-45deg);
 }
-.navPc_item:hover{
+.dropdown_itemText:focus{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus{
     transform: scale(1.1);
     transition: transform 0.3s;
 }
 .navPc_home:hover{
     transform: scale(1.1);
     transition: transform 0.3s;
+}
+.navPc_home__is-focused{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.navPc_item__home:hover,
+.navPc_item__home:focus{
+    transform: none;
+    transition: none;
 }
