--- a/css-contactPage/contact.original.css
+++ b/css-contactPage/contact.original.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1024px) {
   .l-header__subpage {
-    width: 520px;
+    width: 600px;
   }
 }
 @media (max-width: 750px) {
@@ -73,6 +73,36 @@ h1, h2, h3, h4, h5, h6 {
 
 .l-waveImg__b {
   width: 100%;
+}
+
+.skipLink {
+  position: absolute;
+  width: 25vw;
+  top: 5vh;
+  left: -500px;
+  border-radius: 0.3vw;
+  padding: 1% 3%;
+  text-align: center;
+  background-color: #0D88C4;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 750px) {
+  .skipLink {
+    top: 13vh;
+    width: 200px;
+    border-radius: 2vw;
+    padding: 4% 2% 4% 2%;
+  }
+}
+.skipLink .skipLink_text {
+  color: white;
+  font-size: calc(0.1rem + 1.5vw);
+  transition: transform 1s;
+}
+@media (max-width: 1024px) {
+  .skipLink .skipLink_text {
+    font-size: 13px;
+  }
 }
 
 .nav__pc {
@@ -129,7 +159,15 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp {
   display: none;
   position: relative;
-  height: 60px;
+  background-color: white;
+  border-radius: 2vw;
+  width: 220px;
+  padding: 5px 0;
+  margin-top: 1%;
+  margin-right: 5px;
+  margin-left: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s ease-in-out;
 }
 @media (max-width: 750px) {
   .nav__sp {
@@ -140,10 +178,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 210px;
-  margin-top: 1%;
-  margin-right: 5px;
-  margin-left: auto;
+  width: 87%;
+  margin: 0 auto;
 }
 .nav__sp .navSp_menu .navSp_contact {
   background-color: #0D88C4;
@@ -168,6 +204,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 45px;
   height: 100%;
   aspect-ratio: 1/1;
+  transition: transform 0.3s;
   cursor: pointer;
 }
 .nav__sp .navSp_menu .navSp_hamburger .line {
@@ -202,31 +239,38 @@ h1, h2, h3, h4, h5, h6 {
 .nav__sp .navSp_dropdown .dropdown_item {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  padding: 15px 0;
 }
-.nav__sp .navSp_dropdown .dropdown_itemText {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText {
   font-size: 20px;
   margin-left: 16px;
+  transition: transform 0.3s;
 }
-.nav__sp .arrow {
+.nav__sp .navSp_dropdown .dropdown_item .dropdown_itemText__close {
+  font-size: 18px;
+  color: #0D88C4;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+.nav__sp .navSp_dropdown .arrow {
   width: 16px;
   height: 16px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
-.nav__sp .arrow .line__arrow {
+.nav__sp .navSp_dropdown .arrow .line__arrow {
   display: block;
   border-radius: 2px;
   width: 14px;
   height: 0.3vh;
   background-color: #333;
 }
-.nav__sp .arrow .line1__arrow {
+.nav__sp .navSp_dropdown .arrow .line1__arrow {
   transform-origin: top left;
   transform: rotate(31deg);
 }
-.nav__sp .arrow .line2__arrow {
+.nav__sp .navSp_dropdown .arrow .line2__arrow {
   transform-origin: bottom left;
   transform: rotate(-31deg);
 }
@@ -374,6 +418,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: calc(0.1rem + 8vw);
   }
 }
+@media (max-width: 750px) {
+  .sns_title {
+    padding-bottom: 20px;
+  }
+}
 
 .sns_content {
   width: 90%;
@@ -403,6 +452,7 @@ h1, h2, h3, h4, h5, h6 {
   aspect-ratio: 2/3;
   background-color: #797a78;
   border-radius: 5vw;
+  transition: transform 0.3s;
 }
 @media (max-width: 750px) {
   .sns_content .sns_link {
@@ -422,11 +472,30 @@ h1, h2, h3, h4, h5, h6 {
   transition: opacity 0.3s, transform 0.3s;
 }
 
+.skipLink__is-focused {
+  transform: scale(1.1);
+  left: 10px;
+}
+.skipLink__is-focused .skipLink_text:focus {
+  transform: scale(1.3);
+  transition: transform 1s;
+}
+
+.nav__sp .navSp_contact:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
 .nav__sp .navSp_dropdown__is-open {
   opacity: 1;
   visibility: visible;
   transform: translateX(0);
   transition: opacity 0.3s, transform 0.3s;
+}
+
+.navSp_hamburger:focus {
+  outline: none;
+  transform: scale(1.1);
+  transition: transform 0.3s;
 }
 
 .line1__is-active {
@@ -441,7 +510,13 @@ h1, h2, h3, h4, h5, h6 {
   transform: rotate(-45deg);
 }
 
-.navPc_item:hover {
+.dropdown_itemText:focus {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus {
   transform: scale(1.1);
   transition: transform 0.3s;
 }
@@ -451,7 +526,25 @@ h1, h2, h3, h4, h5, h6 {
   transition: transform 0.3s;
 }
 
-.cta_button__conPage:hover {
+.navPc_home__is-focused {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
+.navPc_item__home:hover,
+.navPc_item__home:focus {
+  transform: none;
+  transition: none;
+}
+
+.sns_link:hover,
+.sns_link:focus {
+  transform: scale(1.05);
+  transition: transform 0.3s;
+}
+
+.cta_button__conPage:hover,
+.cta_button__conPage:focus {
   transform: scale(1.05);
   transition: transform 0.3s;
 }/*# sourceMappingURL=contact.original.css.map */
