--- a/css-topPage/style.scss
+++ b/css-topPage/style.scss
@@ -61,6 +61,7 @@ h1, h2, h3, h4, h5, h6{
 } 
 .l-mainPage{
     display: none;
+    position: relative;
 }
 .l-header{
     width: 45.6vw;
@@ -74,7 +75,7 @@ h1, h2, h3, h4, h5, h6{
     transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;
 
     @include media-tablet{
-        width: 520px;
+        width: 600px;
     }
     @include media-sp {
         width: auto;
@@ -183,6 +184,34 @@ h1, h2, h3, h4, h5, h6{
     }
 }
 }
+.skipLink{
+    position: absolute;
+    width: 25vw;
+    top: 5vh;
+    left: -500px;
+    border-radius: 0.3vw;
+    padding: 1% 3%;
+    text-align: center;
+    background-color: #0D88C4;
+    transition: all 0.3s ease-in-out;
+
+    @include media-sp{
+        top: 13vh;
+        width: 200px;
+        border-radius: 2vw;
+        padding: 4% 2% 4% 2%;
+    }
+    
+    .skipLink_text{
+        color: white;
+        font-size: calc(0.1rem + 1.5vw);
+        transition: transform 1s;
+
+        @include media-tablet{
+            font-size: 13px;
+        }
+    }
+}
 .nav__pc{
     border-radius: 10px;
     background-color: white;
@@ -233,7 +262,15 @@ h1, h2, h3, h4, h5, h6{
 .nav__sp{
     display: none;
     position: relative;
-    height: 60px;
+    background-color: white;
+    border-radius: 2vw;
+    width: 220px;
+    padding: 5px 0;
+    margin-top: 1%;
+    margin-right: 5px;
+    margin-left: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;
 
     @include media-sp {
         display: block;
@@ -243,10 +280,8 @@ h1, h2, h3, h4, h5, h6{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 210px;
-        margin-top: 1%;
-        margin-right: 5px;
-        margin-left: auto;
+        width: 87%;
+        margin: 0 auto;
 
         .navSp_contact{
             background-color: #0D88C4;
@@ -272,6 +307,7 @@ h1, h2, h3, h4, h5, h6{
             width: 45px;
             height: 100%;
             aspect-ratio: 1/1;
+            transition: transform 0.3s;
             cursor: pointer;
 
             .line {
@@ -306,29 +342,36 @@ h1, h2, h3, h4, h5, h6{
         transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;  
         
         .dropdown_item{
-        display: flex;
-        align-items: center;
-        margin-bottom: 30px;
-    }
-    .dropdown_itemText{
-        font-size: 20px;
-        margin-left: 16px;
-    }
-    }
-    .arrow{
-        width: 16px;
-        height: 16px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
+            display: flex;
+            align-items: center;
+            padding:15px 0 ;
 
-        .line__arrow{
-            display: block;
-            border-radius: 2px;
-            width: 14px;
-            height: 0.3vh;
-            background-color: #333;
-        }
+            .dropdown_itemText{
+                font-size: 20px;
+                margin-left: 16px;
+                transition: transform 0.3s;
+            }
+            .dropdown_itemText__close{
+                font-size: 18px;
+                color: #0D88C4;
+                transition: transform 0.3s;
+                cursor: pointer;
+            }
+       }
+        .arrow{
+            width: 16px;
+            height: 16px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+
+           .line__arrow{
+                display: block;
+                border-radius: 2px;
+                width: 14px;
+                height: 0.3vh;
+                background-color: #333;
+            }
 
             .line1__arrow{
                 transform-origin: top left;
@@ -338,6 +381,7 @@ h1, h2, h3, h4, h5, h6{
                 transform-origin: bottom left;
                 transform: rotate(-31deg);
             }
+        }
     }
 }
 .mainVisual_const{
@@ -349,7 +393,7 @@ h1, h2, h3, h4, h5, h6{
         width: 80%;
         margin: 3% auto;
         padding-bottom: 3%;
-        border: red solid 7px;
+        border: black solid 7px;
         border-radius: 1.4vw;
 
         @include media-sp{
@@ -359,6 +403,7 @@ h1, h2, h3, h4, h5, h6{
         }
 
         .board_text{
+            display: block;
             font-size: calc(0.1rem + 5vw);
             font-weight: 700;
             text-align: center;
@@ -375,26 +420,26 @@ h1, h2, h3, h4, h5, h6{
         .board_text__nameTop{
             font-size: calc(0.1rem + 20vw);
             letter-spacing: 10px;
-            color: red;
+            color: black;
             line-height: 1;
             font-weight: 700;
             text-align: center;
 
             @include media-sp{
                 font-size: calc(0.1rem + 27vw);
-                margin-bottom: 15%;
+                margin-bottom: 8%;
             }
         }
         .board_text__construction{
             font-size: calc(0.1rem + 9vw);
-            color: red;
+            color: black;
 
             @include media-sp{
                 font-size: calc(0.1rem + 15vw);
             }
         }
         .board_text__top{
-            background-color: red;
+            background-color: black;
             color: white;
             padding: 10px auto;
 
@@ -446,7 +491,7 @@ h1, h2, h3, h4, h5, h6{
     font-size: calc(0.1rem + 2.7vw);
 
     @include media-sp{
-        font-size: calc(0.1rem + 6.3vw);
+        font-size: calc(0.1rem + 8vw);
         margin-bottom: 3vh;
     }
 }
@@ -477,7 +522,7 @@ h1, h2, h3, h4, h5, h6{
 
         @include media-sp{
             opacity: 1;
-            font-size: calc(0.1rem + 2.3vw);
+            font-size: calc(0.1rem + 4vw);
         }
     }
     .topNews_itemTitle{
@@ -536,6 +581,8 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 400px;
         background-color: #8b8f8f;
         border: black solid 0.2vw;
+        position: absolute;
+
         z-index: 10;
 
         @include media-sp{
@@ -562,54 +609,82 @@ h1, h2, h3, h4, h5, h6{
         }
     }
     .activity_itemContent{
-        width: 60%;
+        width: 51%;
         height: auto;
         background-color: #FCF8ED;
-        border-radius: 8.3vw;
+        border-top-left-radius: 8.3vw;
+        border-bottom-left-radius: 8.3vw;
         border: black solid 1px;
-        position: absolute;
-        left: 48vw;
+        margin-left: auto;
 
         @include media-sp{
-            position: static;
-            margin-top: 45vw;
+            margin: 45vw auto 0;
+            border-top-right-radius: 8.3vw;
+            border-bottom-right-radius: 8.3vw;
             width: 100%;
         }
 
         .activity_itemText{
-            margin:20px auto 50px;
-            width: 65%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            margin-right: 0;
+            margin-left: auto;
+            padding-right: 6%;
+            width: 75%;
 
             @include media-sp{
-                margin-top: 50px;
+                margin: 50px auto;
+                padding-right: 0;
                 width: 80%;
             }
+        }
+        .activity_itemTitle{
+            font-size: calc(0.1rem + 3.3vw);
+            font-weight: 700;
+            margin-bottom: 7%;
 
-            .activity_itemTitle{
-                font-size: calc(0.1rem + 3.3vw);
-                font-weight: 700;
-                margin-bottom: 7%;
-
-                @include media-sp{
-                    font-size: calc(0.1rem + 5vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 5vw);
             }
-            .activity_itemDescription{
-                font-size: calc(0.1rem + 1.9vw);
+        }
+        .activity_itemDescription{
+            font-size: calc(0.1rem + 1.9vw);
 
-                @include media-sp{
-                    font-size: calc(0.1rem + 4.1vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 4.1vw);
             }
         }
     }
     .activity_itemContent__r{
-        right: 43vw;
-        left: auto;
+        border-top-right-radius: 8.3vw;
+        border-bottom-right-radius: 8.3vw;
+        border-top-left-radius: 0vw;
+        border-bottom-left-radius: 0vw;
+        margin-right: auto;
+        margin-left: 0;
+
+        @include media-sp{
+            border-top-left-radius: 8.3vw;
+            border-bottom-left-radius: 8.3vw;
+        }
+
+        .activity_itemText__r{
+            width: 80%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            padding-left: 15%;
+            padding-right: 0;
+            margin-left: 0;
+            margin-right: 5%;
+
+            @include media-sp{
+                margin: 50px auto;
+                padding: 0;
+            }
+        }
     }
     .activity_itemImg__r{
-        margin-right: 0;
-        margin-left: auto;
+        right: 0;
     }
 }
 .intro_title{
@@ -845,10 +920,19 @@ h1, h2, h3, h4, h5, h6{
 }
 
 //State
-.l-loadingPage__is-active{
+.l-loadingPage__is-hidden{
     display: none;
     visibility: hidden;
     transition: opacity 1s, visibility 1s;
+}
+.skipLink__is-focused{
+    transform: scale(1.1);
+    left: 10px;
+
+    .skipLink_text:focus{
+        transform: scale(1.3);
+        transition: transform 1s;
+    }
 }
 .l-header__is-open{
     opacity: 1;
@@ -857,12 +941,54 @@ h1, h2, h3, h4, h5, h6{
     transition: opacity 0.3s, transform 0.3s;
 }
 .nav__sp{
+    .navSp_contact:focus{
+        transform: scale(1.1);
+        transition: transform 0.3s;
+    }
+
     .navSp_dropdown__is-open{
     opacity: 1;
     visibility: visible;
     transform: translateX(0); 
     transition: opacity 0.3s, transform 0.3s;
 }
+}
+.navSp_hamburger:focus{
+    outline: none;
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.line1__is-active {
+    transform: rotate(45deg);
+}
+.line2__is-active {
+    opacity: 0 ;
+}
+.line3__is-active {
+    transform: rotate(-45deg);
+}
+.dropdown_itemText:focus{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+
+.navPc_item:hover,
+.navPc_item:focus{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.navPc_home:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.navPc_home__is-focused{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+.navPc_item__home:hover,
+.navPc_item__home:focus{
+    transform: none;
+    transition: none;
 }
 .subheadText__is-open{
     opacity: 1;
@@ -875,6 +1001,7 @@ h1, h2, h3, h4, h5, h6{
     @include media-sp{
         width: 100%;
         font-size: calc(0.1rem + 4.7vw);
+        margin-bottom: 15%;
     }
 }
 .subheadText__r__is-open{
@@ -891,30 +1018,16 @@ h1, h2, h3, h4, h5, h6{
         width: 100%;
         margin-left: 0;
         font-size: calc(0.1rem + 4.7vw);
+        margin-bottom: 15%;
     }
 }
-.line1__is-active {
-    transform: rotate(45deg);
-}
-.line2__is-active {
-    opacity: 0 ;
-}
-.line3__is-active {
-    transform: rotate(-45deg);
-}
-.navPc_item:hover{
-    transform: scale(1.1);
-    transition: transform 0.3s;
-}
-.navPc_home:hover{
-    transform: scale(1.1);
-    transition: transform 0.3s;
-}
-.topNews_item:hover{
+.topNews_item:hover,
+.topNews_item:focus{
     transform: scale(1.02);
     transition: transform 0.3s;
 }
-.cta_button:hover{
+.cta_button:hover,
+.cta_button:focus{
     transform: scale(1.05);
     transition: transform 0.3s;
 }
